# Learning

./: CLAUDE.md  README.md  mooc7.ipynb  pyproject.toml
PDA/: Chapter5.ipynb  Chapter6.ipynb  Chapter7.ipynb
PDA/examples/: example.json
crashcourse/: Chapter1.html  Chapter1.ipynb  Chapter10.ipynb  Chapter11.ipynb  Chapter2.ipynb  Chapter3.html  Chapter3.ipynb  Chapter4.html  Chapter4.ipynb  Chapter5.html  Chapter5.ipynb  Chapter6.html  Chapter6.ipynb  Chapter7.html  Chapter7.ipynb  Chapter8.html  Chapter8.ipynb  Chapter9.html  Chapter9.ipynb  Introduction.ipynb  Tutorial.ipynb  Tutorial_Incomplete.ipynb  car.py  my_car.py  my_restaurant  numbers.json  py_ds.py  restaurant.py  word_count.py
sklearn/: GettingStarted.ipynb  IndexingSelecting.ipynb  IntroDataStru.ipynb  Merge.ipynb  chart.ipynb  mooc1.ipynb  mooc2.ipynb  mooc4.ipynb  mooc4a.ipynb  mooc5.ipynb  mooc6.ipynb  mooc6a.ipynb  mooc7.ipynb  seaborn1.ipynb  seaborn2.ipynb  sklearn0.ipynb
sklearn/data/: titanic.xlsx
